--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "npm run build && vite preview",
     "deploy": "npm run build && echo shlomidom.com > dist/CNAME && gh-pages -d dist"
   },
   "dependencies": {
